; ModuleID = '/home/carl/AnghaBench/openssl/crypto/objects/extr_obj_dat.c_init_added.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/objects/extr_obj_dat.c_init_added.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@added = common dso_local global i32* null, align 8
@added_obj_hash = common dso_local global i32 0, align 4
@added_obj_cmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @init_added to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_added() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @added, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %12

5:                                                ; preds = %0
  %6 = load i32, i32* @added_obj_hash, align 4
  %7 = load i32, i32* @added_obj_cmp, align 4
  %8 = call i32* @lh_ADDED_OBJ_new(i32 %6, i32 %7)
  store i32* %8, i32** @added, align 8
  %9 = load i32*, i32** @added, align 8
  %10 = icmp ne i32* %9, null
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %1, align 4
  br label %12

12:                                               ; preds = %5, %4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32* @lh_ADDED_OBJ_new(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
